tests/typechecker/should_pass/has_trace.csp
channel a
channel b : Int

assert STOP :[has trace] <a, b.0>
