tests/typechecker/should_fail/rename_5.csp
channel  c : Int.Int
channel  d : Int.Bool

test(x,y) = STOP[[x.0 <- y.1]]

test2 = test(c, d)
